# obsolete-cryptography

./: .clangd  .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: python-deploy.yml
obsolete_cryptography/: __init__.py  mcrypt.pyi  mcrypt.pyx  meson.build  mhash.pyi  mhash.pyx
subprojects/libmcrypt-2.5.8-safer/: configure  meson.build
subprojects/libmcrypt-2.5.8-safer/include/: meson.build
subprojects/libmcrypt-2.5.8-safer/include/mutils/: meson.build
subprojects/libmcrypt-2.5.8-safer/lib/: Makefile.am  Makefile.in  meson.build
subprojects/libmcrypt-2.5.8-safer/modules/: gen_symb_table.py  meson.build
subprojects/libmcrypt-2.5.8-safer/modules/algorithms/: Makefile.am  Makefile.in  des.c  threeway.c  tripledes.c  wake.c
subprojects/mhash-0.9.9.9/: meson.build  meson.options
subprojects/mhash-0.9.9.9/include/: meson.build
subprojects/mhash-0.9.9.9/include/mutils/: meson.build
subprojects/mhash-0.9.9.9/lib/: haval.c  libdefs.h  md2.c  meson.build  mhash_int.h  snefru.c  whirlpool.c
