[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'cython',
  'patchelf>=0.14.5.0',
]

[project]
name = 'obsolete-cryptography'
version = '0.3.0'
description = 'Toolbox for exploring various obsolete ciphers and hash algorithms. Based on mcrypt and mhash.'
readme = 'README.md'
license = { file = 'LICENSE.md' }
keywords = ['cryptography', 'mcrypt', 'mhash', 'CTF']
authors = [
  { name = 'dogtopus' },
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Programming Language :: C',
  'Programming Language :: Cython',
  'Topic :: Security :: Cryptography',
  'Topic :: Software Development :: Libraries :: Python Modules',
]

requires-python = '>=3.10'
#dependencies = []

#[project.optional-dependencies]
#test = []

[project.urls]
repository = 'https://github.com/dogtopus/obsolete-cryptography'

[tool.meson-python]
limited-api = true

[tool.meson-python.args]
# We don't want to install the static libraries
install = ['--skip-subprojects']

[tool.cibuildwheel]
# CPython 3.10 ABI3 + all CPython free-threading
build = ["cp310-*", "cp3??t-*"]

# Free-threading is not compatible with ABI3. Notify meson that we don't want ABI3 support.
[[tool.cibuildwheel.overrides]]
select = "cp3??t-*"
config-settings = { setup-args = ["-Dpython.allow_limited_api=false"]}
