option('adler32', type: 'boolean', value: true, description: 'Adler32 Algorithm')
option('crc32', type: 'boolean', value: true, description: 'CRC Algorithm')
option('gost', type: 'boolean', value: true, description: 'GOST Algorithm')
option('haval', type: 'boolean', value: true, description: 'HAVAL Algorithm')
option('md2', type: 'boolean', value: true, description: 'MD-2 Algorithm')
option('md4', type: 'boolean', value: true, description: 'MD-4 Algorithm')
option('md5', type: 'boolean', value: true, description: 'MD-5 Algorithm')
option('ripemd', type: 'boolean', value: true, description: 'RIPE-MD - RIPE Substitute for MD')
option('sha1', type: 'boolean', value: true, description: 'SHA-1 Algorithm')
option('sha256_sha224', type: 'boolean', value: true, description: 'SHA-224 and SHA-256 - SHA-2 Algorithms')
option('sha512_sha384', type: 'boolean', value: true, description: 'SHA-384 and SHA-512 - SHA-2 Algorithms')
option('snefru', type: 'boolean', value: true, description: 'Snefru Algorithm')
option('tiger', type: 'boolean', value: true, description: 'TIGER Algorithm')
option('whirlpool', type: 'boolean', value: true, description: 'Whirlpool Algorithm')
